<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dentalone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tarifas"
        android:name="com.example.dentalone.ui.tarifas.TarifasFragment"
        android:label="@string/menu_tarifas"
        tools:layout="@layout/fragment_tarifas" />

    <fragment
        android:id="@+id/nav_somos"
        android:name="com.example.dentalone.ui.somos.SomosFragment"
        android:label="@string/menu_quienes_somos"
        tools:layout="@layout/fragment_somos" />

    <fragment
        android:id="@+id/nav_plano"
        android:name="com.example.dentalone.ui.planosMaquinas.PlanoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_plano" />

    <fragment
        android:id="@+id/nav_folleto"
        android:name="com.example.dentalone.ui.folleto.FolletoFragment"
        android:label="@string/menu_folleto"
        tools:layout="@layout/fragment_folleto" />

    <fragment
        android:id="@+id/nav_especialidades"
        android:name="com.example.dentalone.ui.especialidades.EspecialidadesFragment"
        android:label="@string/menu_especialidades"
        tools:layout="@layout/fragment_especialidades" />

    <fragment
        android:id="@+id/nav_cadcam"
        android:name="com.example.dentalone.ui.planosMaquinas.PlanoFragment"
        android:label="@string/menu_cadcam"
        tools:layout="@layout/fragment_cadcam" />

</navigation>